--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-nav-bar>  </app-nav-bar>
 <div class="containter" style="margin-top: 140px;">
     
-    <app-shop></app-shop>
+    <router-outlet></router-outlet>
 </div>
 
