--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,9 +1,10 @@
-<div class="container">
+<div class="container mt-3">
     <div class="row">
 
         <section class="col-3">
-            <h5 class="text-warning ml-3">sorts</h5>
-            <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
+            <ng-container *ngIf="types && brands">
+            <h5 class="text-warning ml-3 mt-3 mb-3">sorts</h5>
+            <select class="custom-select mb-3 mb-4" (change)="onSortSelected($event.target.value)">
                 <option *ngFor="let sort of sortOptions" [value]="sort.value">
                     {{sort.name}}
                 </option>
@@ -27,6 +28,7 @@
                     {{type.name}}</li>
 
             </ul>
+        </ng-container>
         </section>
 
         <section class="col-9">
@@ -40,7 +42,7 @@
 
                 </app-paging-header>
 
-                <div class="form-inline mt-2">
+                <div class="form-inline " *ngIf="products">
                     <input (keyup.enter)="onSearch()" class="form-control mr-2" #search style="width: 300px;" placeholder="Search" type="text">
                     <button (click)="onSearch()" class="btn btn-outline-primary mr-2 ">Search</button>
                     <button (click)="onReset()" class="btn btn-outline-success mr-2 my-2">Reset</button>
