--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,7 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
 
+
+
+
+
 /* Importing Bootstrap SCSS file. */
 @import "~bootstrap/scss/bootstrap";
 
+
 /* Importing Datepicker SCSS file. */
 @import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+
+
+
+.xng-breadcrumb-root {
+    padding: 8px 16px;
+    display: inline;
+    border-radius: 0;
+
+}
+
+label.xng-breadcrumb-trail {
+    margin-bottom: 0;
+    color: orange;
+}
+
+.xngb-breadcrumb-separator {
+    padding: 0 0;
+}
+
